[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/salty.png" type="Texture" id=1]
[ext_resource path="res://Assets/pepper.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SaltyPepper.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 10 )

[node name="Salty" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="SaltySprite" type="Sprite" parent="." groups=["Salty"]]
texture = ExtResource( 1 )

[node name="PepperSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -0.5 )
rotation = 0.785398
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Salty_body_entered"]
